working calendar with events

--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "author": "Salman Tariq Mirza",
   "license": "ISC",
   "dependencies": {
+    "clndr": "^1.4.1",
+    "clone": "^1.0.2",
     "clone-deep": "^0.2.4",
     "fullcalendar": "^2.6.1",
     "handlebars": "^4.0.5",
