--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "watchify -d js/main.js -o public/js/bundle.js -v"
+    "watch": "watchify -d js/main.js -o public/js/bundle.js -v",
+    "build": "browserify -e js/main.js -o public/js/bundle.js"
   },
   "keywords": [
     "oleg"
